--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="lead-content">
             <h1>Prateek Sahu</h1>
             <h2>Computer Science Student </h2>
-            <a href="/home/prateek/Phone/Document/proffessional/myresume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="document/myresume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
