--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Prateek Sahu</h1>
+            <h1>Prateek Sahu</h1>   
             <h2>Computer Science Student </h2>
             <a href="document/myresume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -247,7 +247,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/xzbzolyz">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
