--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-md-8">
                     <p>
                         My name is Prateek Sahu. I am Computer Science student at National 
-                        Institute of Technolohy ,Karnataka (NITK). My areas of interest are Data 
+                        Institute of Technology ,Karnataka (NITK). My areas of interest are Data 
                         Structure and Algorithms, Graph Theory , Deep Learning , Computer Vision
                         , Software Development. I love to code and learn new skills. My Passion
                         is to leverage power of computers to solve real world problems . I am also
@@ -115,7 +115,7 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>National Institute of Technolohy, Karnataka</h3>
+            <h3>National Institute of Technology, Karnataka</h3>
             <span class="education-date">August 2017 - present</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <p>
