--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         Structure and Algorithms, Graph Theory , Deep Learning , Computer Vision
                         , Software Development. I love to code and learn new skills. My Passion
                         is to leverage power of computers to solve real world problems . I am also
-                        open to new oppurtunites and challenges that come in way to do so.
+                        open to new opportunities and challenges that come in way to do so.
                     </p>
                 </div>
             </div>
